Code refactor for easier maintainence due to smaller average function size.

--- a/templates/chat/restore-message.hbs
+++ b/templates/chat/restore-message.hbs
@@ -7,8 +7,8 @@
     {{localize "EVENTIDE_RP_SYSTEM.Messages.Sections.Restored"}}
   </div>
   <hr class="chat-card__hr" />
-  <h3>{{localize "EVENTIDE_RP_SYSTEM.Messages.Sections.Restored"}}</h3>
   <div class="chat-card__effects">
+    <div class="chat-card__effects--title">{{localize "EVENTIDE_RP_SYSTEM.Messages.Sections.Restored"}}</div>
     {{#if resolve}}
       <div><i class="fa-regular fa-heart-pulse"></i> {{localize "EVENTIDE_RP_SYSTEM.Messages.Sections.Resolve"}}</div>
     {{/if}}
