--- a/templates/chat/combat-power-message.hbs
+++ b/templates/chat/combat-power-message.hbs
@@ -48,25 +48,7 @@
         <span class="chat-card__value chat-card__value--power">{{roll.total}}</span>
       </div>
     </div>
-    {{#if acCheck}}
-      <div class="chat-card__effects chat-card__effects--ac-check">
-        <div class="chat-card__effects--title">{{localize "EVENTIDE_RP_SYSTEM.Messages.Sections.ACCheck"}}</div>
-        {{#each targetRollData as |target|}}
-          <div class="chat-card__effects--name flexrow"> {{this.name}}:
-            {{#each this.abilities as |ability key|}}
-              {{#ifCond target.compare ">=" ability.ac}}
-                <div class="chat-card__effects--hit flex-group-center">
-              {{/ifCond}}
-              {{#ifCond target.compare "<" ability.ac}}
-                <div class="chat-card__effects--miss flex-group-center">
-              {{/ifCond}}
-              {{ability.abbr}}
-               </div>
-            {{/each}}
-          </div>
-        {{/each}}
-      </div>
-    {{/if}}
+    {{> card-ac-check}}
   {{/if}}
 
   {{#if system.description}}
@@ -78,5 +60,4 @@
     </div>
   {{/if}}
 
-  <hr class="chat-card__hr" />
 </div>
