--- a/templates/chat/feature-message.hbs
+++ b/templates/chat/feature-message.hbs
@@ -11,36 +11,5 @@
     {{{item.system.description}}}
   </div>
 {{/if}}
-<hr class="chat-card__hr" />
-{{#ifCond effects.length ">" 0}}
-  <div class="chat-card__effects"><div class='chat-card__effects--title'>{{localize "EVENTIDE_RP_SYSTEM.Messages.Sections.Effects"}}</div>
-  {{#each effects}}
-    <div class="chat-card__effects--name"><img src="{{this.img}}" class="chat-card__image--secondary" /> {{this.name}}</div>
-    {{#ifCond this.changes.length ">" 0 }}
-      {{#each this.changes}}
-        <div class="chat-card__effects-row">
-          <div class="chat-card__effects-row-cell chat-card__effects-row-cell--first">{{keySplit this.key 2}}</div> 
-          <div class="chat-card__effects-row-cell chat-card__effects-row-cell--middle">
-            {{#ifCond this.mode "===" 5}}
-              {{localize "EVENTIDE_RP_SYSTEM.Messages.Sections.SetTo"}}
-            {{/ifCond}}
-            {{#ifCond this.mode "!==" 5}}
-              {{#ifCond (keySplit this.key 4) "===" "advantage"}}
-                {{localize "EVENTIDE_RP_SYSTEM.Messages.Sections.Adv"}}
-              {{/ifCond}}
-              {{#ifCond (keySplit this.key 4) "===" "disadvantage"}}
-                {{localize "EVENTIDE_RP_SYSTEM.Messages.Sections.Dis"}}
-              {{/ifCond}}
-              {{#ifCond (keySplit this.key 3) "===" "change"}}
-                {{localize "EVENTIDE_RP_SYSTEM.Messages.Sections.Add"}}
-              {{/ifCond}}
-            {{/ifCond}}
-          </div>
-          <div class="chat-card__effects-row-cell chat-card__effects-row-cell--last">{{this.value}}</div>
-        </div>
-      {{/each}}
-    {{/ifCond}}
-  {{/each}}
-  </div>
-{{/ifCond}}
+  {{> card-effects}}
 </div>
