--- a/templates/chat/roll-message.hbs
+++ b/templates/chat/roll-message.hbs
@@ -37,25 +37,7 @@
       <span class="chat-card__value chat-card__value--{{pickedType}}">{{roll.total}}</span>
     </div>
   </div>
-  {{#if acCheck}}
-    <div class="chat-card__effects chat-card__effects--ac-check">
-      <div class="chat-card__effects--title">AC Check</div>
-      {{#each targetRollData as |target|}}
-        <div class="chat-card__effects--name flexrow"> {{this.name}}:
-          {{#each this.abilities as |ability key|}}
-            {{#ifCond target.compare ">=" ability.ac}}
-              <div class="chat-card__effects--hit flex-group-center">
-            {{/ifCond}}
-            {{#ifCond target.compare "<" ability.ac}}
-              <div class="chat-card__effects--miss flex-group-center">
-            {{/ifCond}}
-            {{ability.abbr}}
-            </div>
-          {{/each}}
-        </div>
-      {{/each}}
-    </div>
-  {{/if}}
+  {{> card-ac-check}}
   {{#if description}}
     <div class="chat-card__description">
       <div class="chat-card__description--header">{{actor.name}}. . . </div>
