--- a/templates/chat/combat-power-message.hbs
+++ b/templates/chat/combat-power-message.hbs
@@ -12,12 +12,7 @@
     </div>
   </div>
   
-  <div class="chat-card__combat-roll">
-      {{> roll-info}}
-      <div class="chat-card__combat-roll--result">
-        <span class="chat-card__value chat-card__value--power">{{roll.total}}</span>
-      </div>
-    </div>
+    {{> roll-info cardClass="combat-roll" cardType="power"}}
     {{> card-ac-check}}
 
   {{#if system.description}}
