--- a/templates/macros/popups/combat-power-popup.hbs
+++ b/templates/macros/popups/combat-power-popup.hbs
@@ -14,35 +14,7 @@
         </div>
         {{/if}}
 
-        {{#if item.system.roll}}
-        <div class="popup-form__section">
-            <div class="popup-form__subheader">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.RollInfo"}}</div>
-            <div class="popup-form__group">
-                <div class="popup-form__row">
-                    <div class="popup-form__label">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.RollType"}}</div>
-                    <div class="popup-form__content popup-form__content--data">{{item.system.roll.type}}</div>
-                    <div class="popup-form__label">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.RollAbility"}}</div>
-                    <div class="popup-form__content popup-form__content--data">{{item.system.roll.ability}}</div>
-                </div>
-            </div>
-            <div class="popup-form__group">
-                <div class="popup-form__row">
-                    <div class="popup-form__label">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Bonus"}}</div>
-                    <div class="popup-form__content popup-form__content--data">{{numberFormat item.system.roll.bonus decimals=0 sign=true}}</div>
-                    <div class="popup-form__label">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Adjustments"}}</div>
-                    <div class="popup-form__content popup-form__content--data">
-                        {{#if (eq item.system.roll.diceAdjustments.total 0)}}
-                            <span class="popup-form__text--neutral">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Neutral"}}</span>
-                        {{else if (lt item.system.roll.diceAdjustments.total 0)}}
-                            <span class="popup-form__text--disadvantage">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Disadv"}} {{numberFormat (abs item.system.roll.diceAdjustments.total) decimals=0}}</span>
-                        {{else}}
-                            <span class="popup-form__text--advantage">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Adv"}} {{numberFormat item.system.roll.diceAdjustments.total decimals=0}}</span>
-                        {{/if}}
-                    </div>
-                </div>
-            </div>
-        </div>
-        {{/if}}
+        {{> popup-roll}}
 
         {{#if item.system.prerequisites}}
         <div class="popup-form__section">
