--- a/src/scss/components/_chat-cards.scss
+++ b/src/scss/components/_chat-cards.scss
@@ -36,10 +36,26 @@
   &__header--initiative { background-color: colors.$initiative; }
   &__header--initiative-npc { background-color: colors.$initiative-npc; }
   &__header--initiative-pc { background-color: colors.$initiative-pc; }
-  &__header--critical-hit { background-color: colors.$critical-hit; }
-  &__header--critical-miss { background-color: colors.$critical-miss; }
-  &__header--stolen-crit { background-color: colors.$stolen-crit; }
-  &__header--saved-miss { background-color: colors.$saved-miss; }
+  &__header--critical-hit { 
+    background-color: colors.$critical-hit;
+    // font-size: 1.125rem;
+    width: 100%;
+  }
+  &__header--critical-miss { 
+    background-color: colors.$critical-miss;
+    // font-size: 1.125rem;
+    width: 100%;
+  }
+  &__header--stolen-crit { 
+    background-color: colors.$stolen-crit;
+    // font-size: 1.125rem;
+    width: 100%;
+  }
+  &__header--saved-miss { 
+    background-color: colors.$saved-miss;
+    // font-size: 1.125rem;
+    width: 100%;
+  }
   &__header--unknown { background-color: colors.$unknown; }
   &__header--status { font-size: 1.125rem; }
   &__header--damage { background-color: colors.$damage; }
