--- a/templates/actor/combat-powers.hbs
+++ b/templates/actor/combat-powers.hbs
@@ -6,7 +6,8 @@
     <div class='items-panel__prop items-panel__header-cell'>{{localize 'EVENTIDE_RP_SYSTEM.Item.Inventory.Cost.label'}}</div>
     <div class='items-panel__usage items-panel__header-cell'>{{localize 'EVENTIDE_RP_SYSTEM.Item.Descriptors.UsageInfo.label'}}</div>
     <div class='items-panel__controls items-panel__header-cell'>
-      {{#if @root.editable }}
+      {{#if (eq transformationCombatPowers.length 0)}}
+        {{#if @root.editable }}
           <a
             class='items-panel__control items-panel__create'
             title='{{localize "DOCUMENT.Create" type='Item'}}'
@@ -18,7 +19,13 @@
             {{localize 'DOCUMENT.New' type='item'}}
           </a>
         {{/if}}
-      </div>
+      {{else}}
+        <div class='items-panel__control items-panel__transformed-indicator'>
+          <i class='fas fa-lock' title='{{localize "EVENTIDE_RP_SYSTEM.Actor.CombatPowers.TransformedLocked"}}'></i>
+          <span>{{localize "EVENTIDE_RP_SYSTEM.Actor.CombatPowers.Transformed"}}</span>
+        </div>
+      {{/if}}
+    </div>
     </li>
     {{#if (eq transformationCombatPowers.length 0)}}
         {{#each combatPowers as |item id|}}
@@ -87,7 +94,7 @@
         <div class='item-cost items-panel__prop items-panel__list-cell'>{{item.system.cost}}</div>
         <div class='items-panel__usage items-panel__list-cell'><div>{{item.system.usageInfo}}</div></div>
         <div class='items-panel__controls items-panel__list-cell'>
-          
+
         </div>
       </li>
       {{/each}}
